--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.2",
+    "@types/node": "^20.2.5",
+    "buffer": "^6.0.3",
     "graphql": "^16.6.0"
   }
 }
