--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -12,6 +12,8 @@
     "@apollo/server": "^4.7.2",
     "@types/node": "^20.2.5",
     "buffer": "^6.0.3",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mongoose": "^7.2.2",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
