--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -12,7 +12,9 @@
     "@apollo/server": "^4.7.2",
     "@types/node": "^20.2.5",
     "buffer": "^6.0.3",
+    "dotenv": "^16.1.4",
     "graphql": "^16.6.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "mongoose-unique-validator": "^4.0.0"
   }
