--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.1.4",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "mongoose-unique-validator": "^4.0.0"
