--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -10,13 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.2",
+    "@graphql-tools/schema": "^10.0.0",
     "@types/node": "^20.2.5",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.13.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "ws": "^8.13.0"
   }
 }
